# biff

./: CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  coverage.sh
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml
bbt/: README.md  run-bbt.sh  run.sh
bbt/tests/examples_in_readme/EXAMPLE_1/: run.sh
bbt/tests/examples_in_readme/EXAMPLE_2/: run.sh  sample2.txt
bbt/tests/examples_in_readme/EXAMPLE_3/: run.sh
bbt/tests/examples_in_readme/EXAMPLE_4/: expected  run.sh  sample2.txt
bbt/tests/files_are_equal/0001_OK/: run.sh
bbt/tests/files_are_equal/0003_OK/: run.sh
bbt/tests/files_are_equal/0004_OK/: run.sh
bbt/tests/files_are_equal/0005_OK/: file2.txt  run.sh
bbt/tests/files_are_equal/0006_OK/: file2.txt  run.sh
bbt/tests/files_are_similar/0001_OK/: run.sh
bbt/tests/files_are_similar/0002_OK/: run.sh
bbt/tests/files_are_similar/0003_OK/: run.sh
bbt/tests/files_are_similar/0004_OK/: run.sh
bbt/tests/files_differ/0002_OK/: expected  run.sh
src/: cli.rs  comparator.rs  lib.rs  main.rs
tests/: mod.rs
tests/examples_in_readme/: mod.rs
tests/examples_in_readme/equal_files/: mod.rs
tests/examples_in_readme/equal_files_threshold/: mod.rs  sample1.txt
tests/examples_in_readme/equal_files_with_offset/: mod.rs  sample1.txt
tests/examples_in_readme/files_differ/: mod.rs
tests/files_are_equal/: file1.txt  mod.rs
tests/files_are_similar/: mod.rs
tests/files_differ/: file4.txt  file7.txt  mod.rs
tests/invalid_cli_commands/: mod.rs
tests/no_cli_arguments_passed/: mod.rs
tests/quiet_option/: file5.txt  file6.txt  mod.rs
tests/read_error/: mod.rs
tests/valid_file_size_suffixes/: mod.rs
(+38 files in other folders)
