[package]
name = "biff"
version = "0.1.7"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Byte by byte file comparator"
documentation = "https://docs.rs/biff"
repository = "https://github.com/EngosSoftware/biff.git"
keywords = ["binary", "text", "files", "compare", "comparator"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
hex = "0.4.3"
once_cell = "1.20.2"
