[package]
name = "biff"
version = "0.2.1"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Byte by byte file comparator"
documentation = "https://docs.rs/biff"
repository = "https://github.com/EngosSoftware/biff.git"
keywords = ["binary", "text", "files", "compare", "comparator"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore"
]

[dependencies]
clap = { version = "4.5.53", features = ["cargo"] }
hex = "0.4.3"

[dev-dependencies]
cli-assert = "0.1.0"
